WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
ASSIGNED
267846
(REGRESSION
262652@main
): box-decoration-break: clone is not taken into account when breaking lines
https://bugs.webkit.org/show_bug.cgi?id=267846
Summary
(REGRESSION 262652@main): box-decoration-break: clone is not taken into accou...
Johannes Odland
Reported
2024-01-22 01:10:21 PST
Created
attachment 469494
[details]
A screenshot of the issue in iOS 17 simulator The issue with box-decoration-break reported and fixed in
https://bugs.webkit.org/show_bug.cgi?id=223687
seems to have returned. Steps to reproduce the problem: 1. Add a span inside a div. 2. Define a width on the div. 3. Set `box-decoration-break: clone`, `padding: 15px` and `word-break: break-all` on the span. 4. Fill the span with text.
https://johannesodland.github.io/browserbugs/safari-box-decoration-break-clone-padding-ignored-issue.html
What is the expected behavior? The padding added on each line through `box-decoration-break: clone` should be accounted for when breaking lines. Each padding-box should stay within the container. What went wrong? The extra padding is not accounted for when breaking lines and the extra padding overflows the container. Did this work before? Yes, it worked in Safari 16.4 Does this work in other browsers? Yes, it works in Firefox
Attachments
A screenshot of the issue in iOS 17 simulator
(265.08 KB, image/png)
2024-01-22 01:10 PST
,
Johannes Odland
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-22 10:49:03 PST
<
rdar://problem/121382658
>
zalan
Comment 2
2024-01-29 16:18:34 PST
(In reply to Johannes Odland from
comment #0
)
> Created
attachment 469494
[details]
> A screenshot of the issue in iOS 17 simulator > > The issue with box-decoration-break reported and fixed in >
https://bugs.webkit.org/show_bug.cgi?id=223687
seems to have returned.
oh noo! Let me figure out what happened here. (and thank you for filing it!)
zalan
Comment 3
2024-01-29 16:47:02 PST
This has regressed at
262652@main
. It looks like we did not have proper regression test coverage on this (now we do!).
zalan
Comment 4
2024-01-29 16:47:56 PST
fixing it now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug