(REGRESSION 262652@main): box-decoration-break: clone is not taken into account when breaking lines https://bugs.webkit.org/show_bug.cgi?id=267846 <rdar://problem/121382658>

Reviewed by Antti Koivisto.

Replace existing (and slightly intrusive) cloned decoration box implementation in IFC with
a less complex and more error-prone one. See comment in handleInlineContentWithClonedDecoration.

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::InlineFormattingUtils::inlineItemWidth const):
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::initialize):
(WebCore::Layout::Line::close):
(WebCore::Layout::Line::appendInlineBoxStart):
(WebCore::Layout::Line::appendInlineBoxEnd):
(WebCore::Layout::Line::appendTextContent):
(WebCore::Layout::Line::addBorderAndPaddingEndForInlineBoxDecorationClone): Deleted.
(WebCore::Layout::Line::removeBorderAndPaddingEndForInlineBoxDecorationClone): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::contentLogicalRight const):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineCandidate::InlineContent::setHasTrailingClonedDecoration):
(WebCore::Layout::LineCandidate::InlineContent::hasTrailingClonedDecoration const):
(WebCore::Layout::LineCandidate::InlineContent::reset):
(WebCore::Layout::LineBuilder::candidateContentForLine):
(WebCore::Layout::availableWidth):
(WebCore::Layout::LineBuilder::handleInlineContent):
(WebCore::Layout::lineBreakingResultContentWidth):
(WebCore::Layout::LineBuilder::placedClonedDecorationWidth const):
(WebCore::Layout::LineBuilder::clonedDecorationAtBreakingPosition const):
(WebCore::Layout::LineBuilder::handleInlineContentWithClonedDecoration):
(WebCore::Layout::LineCandidate::InlineContent::setAccumulatedClonedDecorationEnd): Deleted.
(WebCore::Layout::LineCandidate::InlineContent::accumulatedClonedDecorationEnd const): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.h:

Canonical link: https://commits.webkit.org/294644@main